<resources>
    <string name="app_name">SpaceX</string>
    <string name="company_info">%1$s was founded by %2$s in %3$s. It has now %4$s employees, launch sites, and
     is valued at USD %5$s</string>
    <string name="action_filter">filter</string>
    <string name="mission_title">Mission:</string>
    <string name="rocket_title">Rocket:</string>
    <string name="date_time_title">Date/Time:</string>
    <string name="days_title">Days from now:</string>
    <string name="rocket_name_type">%1$s/ %2$s</string>
    <string name="date_time"> %1$s at %2$s </string>
    <string name="success_filter">Launch Success</string>
    <string name="yr_ascending_filter">Year Ascending</string>
    <string name="yr_descending_filter">Year Descending</string>
    <string name="year_filter">Year</string>
    <string name="filter_by">Filter By</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="no_of_days_positive">+%1$s Days</string>
    <string name="no_of_days_negative">-%1$s Days</string>
    <string name="zero_days">0Days</string>
    <string name="something_went_wrong">Something wentwrong</string>
</resources>